// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SourceEditorFrame theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <section
    aria-label="Manuscript source: manuscript/main.tex"
    class="rh-source-editor"
    data-dirty=""
    id="rh-editorframe-ID"
  >
    <div
      class="rh-source-editor__toolbar"
    >
      <p
        class="rh-source-editor__path"
        title="manuscript/main.tex"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-code rh-icon"
          data-icon="file-code"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 12.5 8 15l2 2.5"
          />
          <path
            d="m14 12.5 2 2.5-2 2.5"
          />
        </svg>
        <span
          class="rh-source-editor__path-text"
        >
          manuscript/main.tex
        </span>
      </p>
      <div
        class="rh-source-editor__chips"
      >
        <span
          class="rh-source-editor__chip"
          data-tone="dirty"
          id="rh-editorframe-ID-chip-dirty"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pen-line rh-icon"
            data-icon="pen-line"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 21h8"
            />
            <path
              d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
            />
          </svg>
          <span>
            Unsaved changes
          </span>
        </span>
      </div>
      <div
        class="rh-source-editor__actions"
      >
        <button
          aria-keyshortcuts="Control+S Meta+S"
          class="rh-button rh-button--secondary rh-button--sm"
          data-variant="secondary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-save rh-icon"
              data-icon="save"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
              />
              <path
                d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
              />
              <path
                d="M7 3v4a1 1 0 0 0 1 1h7"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Save
            </span>
          </span>
        </button>
        <button
          class="rh-button rh-button--primary rh-button--sm"
          data-variant="primary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-play rh-icon"
              data-icon="play"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Compile
            </span>
          </span>
        </button>
        <button
          class="rh-button rh-button--ghost rh-button--sm"
          data-variant="ghost"
          disabled=""
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-crosshair rh-icon"
              data-icon="crosshair"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="22"
                x2="18"
                y1="12"
                y2="12"
              />
              <line
                x1="6"
                x2="2"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="6"
                y2="2"
              />
              <line
                x1="12"
                x2="12"
                y1="22"
                y2="18"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Jump to PDF
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="rh-source-editor__surface"
    >
      <pre>
        \\section{Results}
      </pre>
    </div>
    <div
      class="rh-source-editor__status"
    >
      <span
        class="rh-source-editor__cursor"
      >
        Ln 42, Col 7
      </span>
      <span
        class="rh-source-editor__hint"
      >
        <kbd>
          Ctrl
        </kbd>
        /
        <kbd>
          Cmd
        </kbd>
        +
        <kbd>
          S
        </kbd>
         saves
      </span>
    </div>
  </section>
</div>
`;

exports[`SourceEditorFrame theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <section
    aria-label="Manuscript source: manuscript/main.tex"
    class="rh-source-editor"
    data-dirty=""
    id="rh-editorframe-ID"
  >
    <div
      class="rh-source-editor__toolbar"
    >
      <p
        class="rh-source-editor__path"
        title="manuscript/main.tex"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-code rh-icon"
          data-icon="file-code"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 12.5 8 15l2 2.5"
          />
          <path
            d="m14 12.5 2 2.5-2 2.5"
          />
        </svg>
        <span
          class="rh-source-editor__path-text"
        >
          manuscript/main.tex
        </span>
      </p>
      <div
        class="rh-source-editor__chips"
      >
        <span
          class="rh-source-editor__chip"
          data-tone="dirty"
          id="rh-editorframe-ID-chip-dirty"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pen-line rh-icon"
            data-icon="pen-line"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 21h8"
            />
            <path
              d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
            />
          </svg>
          <span>
            Unsaved changes
          </span>
        </span>
      </div>
      <div
        class="rh-source-editor__actions"
      >
        <button
          aria-keyshortcuts="Control+S Meta+S"
          class="rh-button rh-button--secondary rh-button--sm"
          data-variant="secondary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-save rh-icon"
              data-icon="save"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
              />
              <path
                d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
              />
              <path
                d="M7 3v4a1 1 0 0 0 1 1h7"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Save
            </span>
          </span>
        </button>
        <button
          class="rh-button rh-button--primary rh-button--sm"
          data-variant="primary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-play rh-icon"
              data-icon="play"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Compile
            </span>
          </span>
        </button>
        <button
          class="rh-button rh-button--ghost rh-button--sm"
          data-variant="ghost"
          disabled=""
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-crosshair rh-icon"
              data-icon="crosshair"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="22"
                x2="18"
                y1="12"
                y2="12"
              />
              <line
                x1="6"
                x2="2"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="6"
                y2="2"
              />
              <line
                x1="12"
                x2="12"
                y1="22"
                y2="18"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Jump to PDF
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="rh-source-editor__surface"
    >
      <pre>
        \\section{Results}
      </pre>
    </div>
    <div
      class="rh-source-editor__status"
    >
      <span
        class="rh-source-editor__cursor"
      >
        Ln 42, Col 7
      </span>
      <span
        class="rh-source-editor__hint"
      >
        <kbd>
          Ctrl
        </kbd>
        /
        <kbd>
          Cmd
        </kbd>
        +
        <kbd>
          S
        </kbd>
         saves
      </span>
    </div>
  </section>
</div>
`;

exports[`SourceEditorFrame theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <section
    aria-label="Manuscript source: manuscript/main.tex"
    class="rh-source-editor"
    data-dirty=""
    id="rh-editorframe-ID"
  >
    <div
      class="rh-source-editor__toolbar"
    >
      <p
        class="rh-source-editor__path"
        title="manuscript/main.tex"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-code rh-icon"
          data-icon="file-code"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 12.5 8 15l2 2.5"
          />
          <path
            d="m14 12.5 2 2.5-2 2.5"
          />
        </svg>
        <span
          class="rh-source-editor__path-text"
        >
          manuscript/main.tex
        </span>
      </p>
      <div
        class="rh-source-editor__chips"
      >
        <span
          class="rh-source-editor__chip"
          data-tone="dirty"
          id="rh-editorframe-ID-chip-dirty"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pen-line rh-icon"
            data-icon="pen-line"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 21h8"
            />
            <path
              d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
            />
          </svg>
          <span>
            Unsaved changes
          </span>
        </span>
      </div>
      <div
        class="rh-source-editor__actions"
      >
        <button
          aria-keyshortcuts="Control+S Meta+S"
          class="rh-button rh-button--secondary rh-button--sm"
          data-variant="secondary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-save rh-icon"
              data-icon="save"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
              />
              <path
                d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
              />
              <path
                d="M7 3v4a1 1 0 0 0 1 1h7"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Save
            </span>
          </span>
        </button>
        <button
          class="rh-button rh-button--primary rh-button--sm"
          data-variant="primary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-play rh-icon"
              data-icon="play"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Compile
            </span>
          </span>
        </button>
        <button
          class="rh-button rh-button--ghost rh-button--sm"
          data-variant="ghost"
          disabled=""
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-crosshair rh-icon"
              data-icon="crosshair"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="22"
                x2="18"
                y1="12"
                y2="12"
              />
              <line
                x1="6"
                x2="2"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="6"
                y2="2"
              />
              <line
                x1="12"
                x2="12"
                y1="22"
                y2="18"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Jump to PDF
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="rh-source-editor__surface"
    >
      <pre>
        \\section{Results}
      </pre>
    </div>
    <div
      class="rh-source-editor__status"
    >
      <span
        class="rh-source-editor__cursor"
      >
        Ln 42, Col 7
      </span>
      <span
        class="rh-source-editor__hint"
      >
        <kbd>
          Ctrl
        </kbd>
        /
        <kbd>
          Cmd
        </kbd>
        +
        <kbd>
          S
        </kbd>
         saves
      </span>
    </div>
  </section>
</div>
`;

exports[`SourceEditorFrame theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <section
    aria-label="Manuscript source: manuscript/main.tex"
    class="rh-source-editor"
    data-dirty=""
    id="rh-editorframe-ID"
  >
    <div
      class="rh-source-editor__toolbar"
    >
      <p
        class="rh-source-editor__path"
        title="manuscript/main.tex"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-code rh-icon"
          data-icon="file-code"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 12.5 8 15l2 2.5"
          />
          <path
            d="m14 12.5 2 2.5-2 2.5"
          />
        </svg>
        <span
          class="rh-source-editor__path-text"
        >
          manuscript/main.tex
        </span>
      </p>
      <div
        class="rh-source-editor__chips"
      >
        <span
          class="rh-source-editor__chip"
          data-tone="dirty"
          id="rh-editorframe-ID-chip-dirty"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pen-line rh-icon"
            data-icon="pen-line"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 21h8"
            />
            <path
              d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
            />
          </svg>
          <span>
            Unsaved changes
          </span>
        </span>
      </div>
      <div
        class="rh-source-editor__actions"
      >
        <button
          aria-keyshortcuts="Control+S Meta+S"
          class="rh-button rh-button--secondary rh-button--sm"
          data-variant="secondary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-save rh-icon"
              data-icon="save"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
              />
              <path
                d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
              />
              <path
                d="M7 3v4a1 1 0 0 0 1 1h7"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Save
            </span>
          </span>
        </button>
        <button
          class="rh-button rh-button--primary rh-button--sm"
          data-variant="primary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-play rh-icon"
              data-icon="play"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Compile
            </span>
          </span>
        </button>
        <button
          class="rh-button rh-button--ghost rh-button--sm"
          data-variant="ghost"
          disabled=""
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-crosshair rh-icon"
              data-icon="crosshair"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="22"
                x2="18"
                y1="12"
                y2="12"
              />
              <line
                x1="6"
                x2="2"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="6"
                y2="2"
              />
              <line
                x1="12"
                x2="12"
                y1="22"
                y2="18"
              />
            </svg>
            <span
              class="rh-button__label"
            >
              Jump to PDF
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="rh-source-editor__surface"
    >
      <pre>
        \\section{Results}
      </pre>
    </div>
    <div
      class="rh-source-editor__status"
    >
      <span
        class="rh-source-editor__cursor"
      >
        Ln 42, Col 7
      </span>
      <span
        class="rh-source-editor__hint"
      >
        <kbd>
          Ctrl
        </kbd>
        /
        <kbd>
          Cmd
        </kbd>
        +
        <kbd>
          S
        </kbd>
         saves
      </span>
    </div>
  </section>
</div>
`;
